--- a/index.html
+++ b/index.html
@@ -16,14 +16,31 @@
 				</div>
 		<div class="row text-center mt-5">
 				<div class="col-md-6 mb-5">
-				<a  class="btn btn-dark btn-lg btn-block" href="https://docs.google.com/forms/d/e/1FAIpQLSdwXYPkt87jCzS4KRS8qsv7a_tGUI0Re7JbRIvECKuPqqtjSg/viewform">Patient</a>
+				<a  class="btn btn-dark btn-lg btn-block" href="https://docs.google.com/forms/d/e/1FAIpQLSdwXYPkt87jCzS4KRS8qsv7a_tGUI0Re7JbRIvECKuPqqtjSg/viewform">Donor / डोनर </a>
 			</div>
 			<div class="col-md-6">
-              <a class="btn btn-light btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1Jv0Yc2ERPnZR-99b1V4cvEafhEgMbyM1CIWOZandt7E/edit#gid=364924928">Donors List</a>
+              <a class="btn btn-light btn-lg btn-block" href="https://docs.google.com/spreadsheets/d/1Jv0Yc2ERPnZR-99b1V4cvEafhEgMbyM1CIWOZandt7E/edit#gid=364924928"> Patient / मरीज </a>
             </div>
 			</div>
 	</div>	
 	</section>
+	<section class="required mt-4">
+			<h2 class="heading-2">प्लाज्मा कौन दे सकता है ?</h2>
+		<ul >
+			<li class="text-center">व्यक्ति की आयु 18-65 वर्ष के बीच हो</li>
+			<li class="text-center">पिछले 120 से 30 दिन के भीतर कोरोना से स्वस्थ हुए हो</li>
+			<li class="text-center">कोई भी पुरानी बीमारी (high BP, diabeties, thyroid) नही हो</li>
+			<li class="text-center">55 किलो से अधिक वजन हो</li>
+			<li class="text-center">कोरोना की वैक्सीन नही लगी हो</li>
+		</ul>
+	</section>
+	<footer class="disclaimer">
+		<h2 class = "heading-3">Disclaimer</h2>
+		<p class="text-center">
+This is to inform you that your data will be available publically to the patient so that they can directly contact with the donor.
+In any case, if you want to remove your data from the database or you have donated plasma to someone, please write us at <a href="covidgwlalert@gmail.com">covidgwlalert@gmail.com</a> or whatsapp at <a href="whatsapp://send?abid=9630785097&text=Plasma%2C%20Help!">9630785097</a></p>
+	
+	</footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
